update the repository commit for updated u-boot and linux kernel

--- a/conf/machine/imx7dsenzacarta.conf
+++ b/conf/machine/imx7dsenzacarta.conf
@@ -30,4 +30,4 @@ UBOOT_CONFIG[mfgtool]  = "mx7dsenzacarta_config"
 
 #OPTEE_BIN_EXT = "7dsdb"
 
-XSERVER += "mesa-driver-swrast"
+#XSERVER += "mesa-driver-swrast"
